# readme-code-extractor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
negative_tests/src/: lib.rs
negative_tests_runner/: Cargo.toml
negative_tests_runner/src/: lib.rs
positive_tests/: Cargo.toml
positive_tests/src/: lib.rs
src/: lib.rs
tests/: simple_no_panic.md
